--- a/Example/Podfile
+++ b/Example/Podfile
@@ -7,6 +7,8 @@ pod 'pop', '~> 1.0'
 
 target 'TabBarPicker_Example', :exclusive => true do
   pod "TabBarPicker", :path => "../"
+  pod 'PureLayout'
+  pod 'pop', '~> 1.0'
 end
 
 target 'TabBarPicker_Tests', :exclusive => true do
